# exacademy

./: .dockerignore  .gitignore  CI-CD-SETUP.md  DEPLOYMENT.md  Jenkinsfile  OAUTH_SETUP.md  README.md  deploy-to-server.sh  docker-compose.prod.yml  docker-compose.yml  example.env  jenkins-setup.sh  kubeconfig  next.config.ts  package-lock.json  package.json  tailwind.config.ts
api/: .cargo-watch.toml  .env  Cargo.toml  Makefile  example.env
api-server/: Cargo.toml  Dockerfile  Makefile  example.env  swagger.yml
api-server/docs/: auth.md  auth.mdx  categories.md  categories.mdx  courses.md  errors.mdx  health.md  health.mdx  index.md  index.mdx  lessons.md  products.md  products.mdx  users.md  users.mdx
api-server/migrations/: 0001_create_core_tables.down.sql  0005_create_course_modules_and_lessons.up.sql
api-server/scripts/: generate-openapi.sh
api-server/src/: lib.rs  main.rs
api-server/src/applications/: auth.rs  mod.rs  users.rs
api-server/src/applications/auth/: github.rs  login.rs  mod.rs  refresh.rs  register.rs  utils.rs
api-server/src/applications/courses/: course.rs  course_list_by_instructor.rs  create.rs  delete_by_id.rs  get_by_id.rs  get_by_slug.rs  list.rs  list_paginated.rs  mod.rs  (+1 more)
api-server/src/cmd/: migrate.rs  mod.rs  openapi.rs  root.rs
api-server/src/configs/: app_context.rs  auth.config.rs  db.config.rs  kafka.config.rs  mod.rs  redis.config.rs  vimeo.config.rs
api-server/src/pkg/: mod.rs
api-server/src/repositories/: courses.rs  mod.rs  users.rs
api-server/src/types/: course_types.rs  user_types.rs
api-server/tests/: applications_auth_test.rs  applications_users_test.rs  auth_routes.rs  categories_routes.rs  products_routes.rs  repositories_users_test.rs  users_routes.rs
api-server/tests/common/: db.rs  fakes.rs  mod.rs  redis.rs
api/docs/: auth.md
api/src/: lib.rs  main.rs
api/src/application/: mod.rs  services.rs  social.rs
api/src/cmd/: apis.rs  cli.rs  grpc.rs  migrate.rs  mod.rs  root.rs
api/src/configs/: configs.rs  load.rs  mod.rs
api/src/domain/: sessions.rs  users.rs
api/src/infrastructure/: repositories.rs
api/src/pkg/: mod.rs  security.rs
api/src/schemas/: accounts.rs  comments.rs  common.rs  course_enrollments.rs  course_modules.rs  course_reviews.rs  course_tags.rs  courses.rs  lesson_contents.rs  lessons.rs  likes.rs  mod.rs  post_tags.rs  posts.rs  sessions.rs  tags.rs  users.rs  validators.rs  verification_tokens.rs
apis/: .gitignore  Cargo.toml  Dockerfile  GRAPHQL_AUTH_IMPLEMENTATION.md  Makefile  build.rs  example.env  openapi.yml
apis/docs/: auth.md  courses.md  errors.md  health.md  modules.md
apis/docs/graphql/: api-reference.md  example-queries.graphql  schema.md
apis/migrations/: 0001_create_core_tables.up.sql  0002_update_user.down.sql  0002_update_user.up.sql  0003_update_user_table_by_default_is_Active_false.down.sql  0003_update_user_table_by_default_is_Active_false.up.sql  0004_create_courses_table.down.sql  0004_create_courses_table.up.sql  0005_create_course_modules_and_lessons.down.sql  0006_update_db_all.up.sql  0007_update_courses_instructor_id_not_null.down.sql  0007_update_courses_instructor_id_not_null.up.sql  0008_courses_outcomes_new_field_add.down.sql  0008_courses_outcomes_new_field_add.up.sql  0009_remove_courses_published_column.down.sql  0009_remove_courses_published_column.up.sql  0010_add_courses_category_and_tags.up.sql  0011_add_lesson_details.down.sql  0011_add_lesson_details.up.sql  0012_delete_product_table_add_category_curse_relation.down.sql  0012_delete_product_table_add_category_curse_relation.up.sql  0013_restore_course_category_column.down.sql  0013_restore_course_category_column.up.sql  0014_add_course_lessons_trigger.down.sql  0014_add_course_lessons_trigger.up.sql  0015_create_blog_posts.down.sql  0015_create_blog_posts.up.sql  0015_create_videos_table.down.sql  0015_create_videos_table.up.sql
apis/proto/: course_activity.proto
apis/scripts/: generate-graphql-docs.sh
apis/src/: lib.rs  main.rs
apis/src/applications/: categories.rs  course_categories.rs  mod.rs  users.rs  video.rs
apis/src/cmd/: apis.rs  cli.rs  graphql.rs  grpc.rs  mod.rs  openapi.rs  root.rs
apis/src/configs/: app_context.rs  auth.config.rs  email.config.rs  mod.rs  spaces.config.rs  system.config.rs
apis/src/interfaces/: mod.rs
apis/src/pkg/: mod.rs  validators.rs
apis/src/repositories/: blog_comments.rs  blog_likes.rs  blog_posts.rs  blog_tags.rs  categories.rs  course_categories.rs  courses.rs  lesson_assignments.rs  lesson_contents.rs  lesson_questions.rs  lessons.rs  mod.rs  modules.rs  users.rs  videos.rs
apis/src/types/: course_types.rs  mod.rs  user_types.rs  video_types.rs
(+867 files in other folders)
