[package]
name = "execute_academy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4.11.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.18"
rand = "0.8"
config = "0.15.13"
dotenv = "0.15.0"
mongodb = { version = "3.1.0" }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
rand_core = "0.6.4"
async-trait = "0.1.80"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
