[package]
name = "execute_academy"
version = "0.1.0"
edition = "2024"

[lib]
name = "execute_academy"
path = "src/lib.rs"

[[bin]]
name = "execute_academy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
dotenv = "0.15.0"
rand_core = "0.9.3"
rand = "0.8"
argon2 = "0.5.3"
anyhow = "1.0.99"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "tokio1",
    "smtp-transport",
    "hostname",
    "pool",
    "rustls-tls",
    "tokio1-rustls",
] }

uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde", "clock"] }
serde_json = "1.0.142"
once_cell = "1.21.3"
redis = { version = "0.32", features = ["tokio-comp"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = [
    "cookie",
    "typed-header",
    "multipart",
] }
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "compression-br",
    "compression-gzip",
    "propagate-header",
    "fs",
] }
http = "1.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
mime = "0.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"


# Validation (derive-based, similar to Zod schemas)
validator = { version = "0.18", features = ["derive"] }

# OpenAPI / Swagger
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum", "reqwest"] }

# HTTP client for Vimeo API
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
base64 = "0.22"
urlencoding = "2.1.3"

# YAML serialization for OpenAPI generation
serde_yaml = "0.9"

[dev-dependencies]
serial_test = "3"
